  CHANGES IN sostatpp VERSION 0.11.3

    o quadratsplot for backtransformed patterns

    o updated demo files (data analysis from H&J 2013)

    o extract.fdsample now tolerates small differences in argument (numerical effects)

  CHANGES IN sostatpp VERSION 0.11.2

    o renamed estK, estL, estDeltaKdir to K.est, L.est, DeltaKdir.est to stress
      similarity to spatstat, since these functions return fv-objects
    
    o removed obsolete functions like Kpermute.test

    o adjustments in the documentation

  CHANGES IN sostatpp VERSION 0.11.1

    o new plot function for class Ktest
    
    o function quadratsplot completely rewritten, with changed call
    
    o some fixes

  CHANGES IN sostatpp VERSION 0.11.0

    o new functions twosample.K.test and sos.test, to replace Kpermute.test

    o new class Ktest

  CHANGES IN sostatpp VERSION 0.10.1
  
    o new function quadratsets.hilo: makes sets of test quadrats

    o fixed: subsetting of sostyppp objects behaved different for marked and
      unmarked patterns


  CHANGES IN sostatpp VERSION 0.10.0
  
    o utilities for plotting have been replaced by separate package plottools
      with extra functionality

    o new methods for ppsample:
      plot
      subsampling with [

    o quadratsubsample renamed to ppsubsample
    
    o a number of fixes
 
  CHANGES IN sostatpp VERSION 0.9.2
  
    o coordTransformation now accepts transformation functions with extra 
      arguments
  
  CHANGES IN sostatpp VERSION 0.9.1
    
    o new functions: 
      is.ppsample, 
      backtransformed.ppsample

    o changed internal element names of class sostyppp

  CHANGES IN sostatpp VERSION 0.9.0

    o new class ppsample with generator quadratsubsample

  CHANGES IN sostatpp VERSION 0.8.4
    
    o new function lplot: plotting objects in a list
    plot arguments may be also given as named lists, thus assigning the designated
    parameters to the objects in the list.
    
    o helper function retagList
    
